[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "stjudecloud-merge-counts"
version = "1.0.0"
description = "Utility for merging RNA-seq expression counts files from St. Jude Cloud."
license = "MIT"
authors = [
    "Clay McLeod <Clay.McLeod@STJUDE.org>",
    "Andrew Frantz <Andrew.Frantz@STJUDE.org"
]
readme = "README.md"
repository = "https://github.com/stjudecloud/merge-counts"
keywords = [
    "bioinformatics",
    "genomics",
    "htseq",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

packages = [
    { include = "mergecounts" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
tables = "^3.6.1"
tqdm = "^4.48.2"
logzero = "^1.5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.5.3"
black = "^19.10b0"

[tool.poetry.scripts]
stjudecloud-merge-counts = 'mergecounts.__main__:run'
